[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyvalon"
version = "0.1.0"
description = "Python library for controlling Valon Synthesizer devices (V5015, V5007, V5008)"
readme = "README.md"
license = {text = "MIT"}
authors = [{ name="Christian Hellum Bye", email="cbh@berkeley.edu" }]
requires-python = ">=3.10"
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = ["pyserial"]

[project.optional-dependencies]
dev = [
  "build",
  "twine",
  "ruff",
  "pytest",
  "pytest-cov",
  "pytest-timeout",
]

[project.scripts]
v5008 = "pyvalon.v5008:main"
v5015 = "pyvalon.v5015:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
  "--cov=pyvalon",
  "--cov-report=term-missing",
  "--cov-report=xml",
  "--junitxml=junit.xml",
  "-o junit_family=legacy",
  "--timeout=60",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-ignore = ["E203"]

[tool.ruff.lint.per-file-ignores]
"src/*/__init__.py" = ["F401"]
